// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtn.ts should be removable 1`] = `

<span tabindex="-1"
      class="v-chip v-chip--no-color v-chip--removable theme--light v-size--default"
>
  <span class="v-chip__content">
    <i aria-hidden="true"
       class="v-icon v-chip__close v-icon--link v-icon--right material-icons theme--light"
    >
      $vuetify.icons.delete
    </i>
  </span>
</span>

`;

exports[`VBtn.ts should have a v-chip class 1`] = `

<span tabindex="-1"
      class="v-chip v-chip--no-color theme--light v-size--default"
>
  <span class="v-chip__content">
  </span>
</span>

`;
